--- a/css/style.css
+++ b/css/style.css
@@ -764,7 +764,7 @@ a.callbacks_nav.callbacks2_nav.next {
     font-weight: normal;
     background: none;
     border: 1px solid #E6E4E4;
-    color: #D2D1D1;
+    /*color: #D2D1D1;*/
     outline: none;
     font-size: 14px;
     margin: 6px 0 17px 0px;
